d3d11videosink: Mouse double-click no longer works
Describe your issue
In a winforms app, with GstSharp, the double-click event is no longer raised when clicking on the video panel (using the d3d11videosink
Expected Behavior
The C# MouseClick, DoubleClick, and MouseDoubleClick events should be raised. The older d3dvideosink
raised these events (and still does if manually specified in the pipeline).
Observed Behavior
No double-click event is raised, however an ElementMessage is sent on the bus for the mouse-click (but not double-click).
The mouse-released
message is also not posted on the bus using d3d11.
Setup
- Operating System: Windows 10
- Device: Computer
- GStreamer Version: 1.20.1
- Launch line: videotestsrc ! d3d11videosink
Steps to reproduce the bug
- Setup a GstSharp/Winforms app, with the video sent to a panel.
- Add an event listener for the double-click event.
- Double-click the panel. Observe the event being raised.
- Start the pipeline.
- Double-click the panel. Observe the event is no longer raised.
How reproducible is the bug?
Always.
Additional Information
The autovideosink
now chooses d3d11 as its actual-sink, so this is the default behavior on Windows all else being equal.
Mouse-move events are also sent on the Bus as Element messages.